syntax = "proto3";

message ProtoConnection {
  int32 stop_dep_idx = 1;
  int32 stop_arr_idx = 2;
  int32 time_dep = 3;
  int32 time_arr = 4;
  int32 trip_idx = 5;
  int32 can_board = 6;
  int32 can_unboard = 7;
  int32 sequence = 8;
}