syntax = "proto3";
import 'proto_od_trip_footpath.proto';

message ProtoOdTrip {
  int64  id                          = 1;
  int64  person_id                   = 2;
  int64  household_id                = 3;
  int32  age                         = 4;
  int32  departure_time_seconds      = 5;
  int32  arrival_time_seconds        = 6;
  int32  walking_travel_time_seconds = 7;
  int32  cycling_travel_time_seconds = 8;
  int32  driving_travel_time_seconds = 9;
  double expansion_factor            = 10;

  string age_group            = 11;
  string gender               = 12;
  string mode                 = 13;
  string occupation           = 14;
  string activity_origin      = 15;
  string activity_destination = 16;
  
  repeated ProtoOdTripFootpath access_footpaths = 17;
  repeated ProtoOdTripFootpath egress_footpaths = 18;

  double origin_latitude = 19;
  double origin_longitude = 20;
  double destination_latitude = 21;
  double destination_longitude = 22;
  double home_latitude = 23;
  double home_longitude = 24;
  

}