syntax = "proto3";

message ProtoTrip {
  int64 id = 1;
  int64 route_id = 2;
  int64 route_path_id = 3;
  int64 route_type_id = 4;
  int64 agency_id = 5;
  int64 service_id = 6;
}